made updated changes to define.html

--- a/define.html
+++ b/define.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">"
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -14,6 +15,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 body, html {
   height: 100%;
   line-height: 1.8;
+  scroll-behavior: smooth;
 }
 
 .w3-bar .w3-button {
@@ -21,7 +23,6 @@ body, html {
 }
 </style>
 
-<body>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
@@ -53,11 +54,11 @@ body, html {
 <div class="jumbotron" style="background-image: url('Home.jpg');background-size: cover; min-height: 100%; text-align: center">
     <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home"></header>
     <br /> <br /> <br />
-    <h1 class="display-4" style="font-family: cursive">to reach</h1>
+    <h1 class="display-4" style="font-family: 'Mr Dafoe', cursive">to reach</h1>
     <br /> <br />
-    <h1 class="display-4" style="font-family:cursive">to feel</h1>
+    <h1 class="display-4" style="font-family: 'Mr Dafoe', cursive">to feel</h1>
     <br /> <br />
-    <h1 class="display-4" style="font-family:cursive">to know</h1>
+    <h1 class="display-4" style="font-family: 'Mr Dafoe', cursive">to know</h1>
     <br /> <br /> <br />
     <a href="#about" class="w3-bar-item w3-black w3-button">Learn more</a>
   </div>
