made updated changes to define.html

--- a/define.html
+++ b/define.html
@@ -95,7 +95,7 @@ body, html {
     <br /> <br /><br /><br /> <br /><br />
   <h3 class="w3-center" style="color:white">See previously published define magazines</h3>
   <br /> <br /><br />
-  <p><a href="http://online.fliphtml5.com/xpssr/srdz/" class="w3-button w3-black"><i class="fa fa-th"> </i> View our volumes</a></p>
+  <p><a href="http://online.fliphtml5.com/xpssr/srdz/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Vol.2</a></p>
   <div class="w3-row-padding" style="margin-top:64px">
   </div>
 </div>
