--- a/define.html
+++ b/define.html
@@ -30,8 +30,8 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-user"></i> ABOUT</a>
-      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-bars"></i> SUBMISSION INFO</a>
-      <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> VOLUMES</a>
+      <a href="#submissioninfo" class="w3-bar-item w3-button"><i class="fa fa-bars"></i> SUBMISSION INFO</a>
+      <a href="#volumes" class="w3-bar-item w3-button"><i class="fa fa-th"></i> VOLUMES</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -83,7 +83,7 @@ body, html {
 </div>
 
 <!-- Submission Info Section -->
-<div class="w3-container w3-black" style="padding:128px 16px; text-align: center" id="team">
+<div class="w3-container w3-black" style="padding:128px 16px; text-align: center" id="submissioninfo">
     <br /> <br />
     <h3 class="w3-center" style="color: white">Interested in submitting your art/literary work?</h3>
   <br /> <br /><br />
@@ -91,7 +91,7 @@ body, html {
 </div>
 
 <!-- Volumes Section -->
-<div class="w3-container" style="padding:128px 16px; text-align: center; background-image: url('Volumes.jpg'); background-size: cover; min-height: 100%;" id="work">
+<div class="w3-container" style="padding:128px 16px; text-align: center; background-image: url('Volumes.jpg'); background-size: cover; min-height: 100%;" id="volumes">
     <br /> <br /><br /><br /> <br /><br />
   <h3 class="w3-center" style="color:white">See previously published define magazines</h3>
   <br /> <br /><br />
